<resources>
    <string name="app_name">Food Jar</string>
    <string name="phone_">Phone (+91 )</string>
    <string name="postal_address">City</string>
    <string name="age">Age</string>
    <string name="enter_your_name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email (abc@gmail.com)</string>
    <string name="email_login">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Create Password</string>
    <string name="delivery_agent">DeliveryAgent</string>
    <string name="customer">Customer</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_signUp">New User</string>
    <string name="_3">3</string>
    <string name="orders_n_delivered_today">Orders \n Delivered To You</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="_10_00_n_am">10:08 \n AM</string>
    <string name="orders_delivered_today">Orders \nDelivered To You</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_out">sign out</string>
    <string name="title_activity_menu">Menu</string>

    <string-array name="role">
        <item>Delivery Agent</item>
        <item>Customer</item>
    </string-array>

    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_sub_menu">SubMenu</string>
    <string name="yay_we_have_recieved_your_norder">Yay! We have received your order…</string>
    <string name="hello_world">Hello world!</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="back">BACK</string>
</resources>