<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:screenOrientation="portrait"
    app:showAsAction="always|withText">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="0dp">


            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_above="@+id/etLoginUserEmail"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="35dp"
                android:contentDescription="App's logo"
                android:paddingBottom="5dp"
                android:src="@drawable/app_logo" />

            <ImageView
                android:id="@+id/icon_username"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingBottom="7dp"
                android:src="@drawable/icon_username"
                android:layout_below="@+id/app_logo"
                android:layout_marginTop="2dp"/>

            <EditText
                android:id="@+id/etLoginUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingBottom="20dp"
                android:textColor="#AFAEAE"
                android:textColorHint="#AFAEAE"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_below="@+id/etLoginUserEmail"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingBottom="5dp"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLoginUserEmail"
                android:layout_marginBottom="5dp"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingBottom="15dp"
                android:textColor="#AFAEAE"
                android:textColorHint="#AFAEAE"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/rbgLoginUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLoginPassword"
                android:checkedButton="@+id/rbUserRider"
                android:dividerPadding="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbUserRider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/delivery_agent"
                    android:textColor="#AFAEAE"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbUserClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/customer"
                    android:textColor="#AFAEAE"
                    android:textSize="12sp" />

            </RadioGroup>


            <Button
                android:id="@+id/btnLoginSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rbgLoginUserType"
                android:layout_marginTop="20dp"
                android:background="#4CA1FE"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLoginSubmit"
                android:layout_alignEnd="@+id/btnLoginSubmit"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forgot_password"
                android:textColor="#AFAEAE"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLoginSubmit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textColor="#AFAEAE"
                android:textSize="12sp"
                android:onClick="onClick"
                android:clickable="true"/>

        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>