<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiderDashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/lyTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleOrderNumber"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@drawable/icon_circle_title"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/_3"
                android:textColor="#ffffff"
                android:textSize="17pt" />

            <TextView
                android:id="@+id/tvTitleDeliverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="left"
                android:text="Orders \nDelivered By You"
                android:textColor="#5B6B7C"
                android:textSize="8.4pt" />


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:gravity="right">

                <ImageView
                    android:id="@+id/ivTitleLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/app_logo"
                    android:contentDescription="TODO"
                    android:foregroundGravity="center" />

            </RelativeLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRiderDashboard"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tvProfileWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="#fff"
                    android:textSize="8.77pt" />

                <TextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvProfileWelcome"
                    android:layout_marginTop="7dp"
                    android:text="@string/name"
                    android:textColor="#fff"
                    android:textSize="12.02pt" />

                <TextView
                    android:id="@+id/tvProfileLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvProfileName"
                    android:layout_marginTop="10dp"
                    android:text="You logged in at"
                    android:textColor="#fff"
                    android:textSize="6pt" />

                <TextView
                    android:id="@+id/btnProfileLoginTime"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/tvProfileLogin"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_profile_item"
                    android:gravity="center"
                    android:text="@string/_10_00_n_am"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tvProfileDuty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnProfileLoginTime"
                    android:layout_marginTop="15dp"
                    android:text="Location of duty"
                    android:textColor="#fff"
                    android:textSize="7.5pt" />

                <TextView
                    android:id="@+id/btnProfileDuty"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/tvProfileDuty"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_profile_item"
                    android:gravity="center"
                    android:text="@string/hyderabad"
                    android:textColor="#ffffff"
                    android:textSize="6pt" />

                <TextView
                    android:id="@+id/tvProfileOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnProfileDuty"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="Orders"
                    android:textColor="#fff"
                    android:textSize="7.5pt" />

                <TextView
                    android:id="@+id/btnProfileOrder"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/tvProfileOrder"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_profile_item"
                    android:gravity="center"
                    android:text="10 \nDelivered"
                    android:textColor="#ffffff"
                    android:textSize="6pt" />

                <Button
                    android:id="@+id/btnPlaceOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnProfileOrder"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_place_order_style"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="CHECK ORDERS"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/naviBar"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"

        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>